--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/editar"
+    android:background="@drawable/cata"
     tools:context=".MainActivity">
-
 
     <TextView
         android:layout_width="wrap_content"
