--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Home"
     android:background="@color/aquamarine">
+
     <ImageView
         android:id="@+id/logo"
-        android:src="@drawable/desfiladero"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="187dp"
+        android:layout_height="115dp"
+        android:src="@drawable/montanas"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1" />
     <TextView
         android:id="@+id/titulo"
         app:layout_constraintTop_toBottomOf="@id/logo"
