--- a/app/src/main/res/layout/activity_hoteles_home.xml
+++ b/app/src/main/res/layout/activity_hoteles_home.xml
@@ -8,45 +8,54 @@
     android:background="@color/cornflowerblue"
     >
 
+
     <TextView
-        android:text="@string/resenahoteles"
+        android:id="@+id/holi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.5"
+        android:text="@string/resenahoteles"
         android:textSize="22dp"
-        android:id="@+id/holi"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.366" />
 
+    <ImageView
 
-        <ImageView
+        android:layout_width="900dp"
+        android:layout_height="200dp"
+        android:src="@drawable/hotel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/holi"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            android:layout_width="900dp"
-            android:layout_height="200dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_bias="0.5"
-            android:src="@drawable/hotel"
-            app:layout_constraintTop_toBottomOf="@id/holi"
-            />
+    <ImageView
+
+        android:layout_width="900dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="448dp"
+        android:src="@drawable/nutibara"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/botonsitios"
-        android:backgroundTint="@color/blueviolet"
-        android:text="Ver más"
-        android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/holi"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="30dp"
+        android:backgroundTint="@color/blueviolet"
+        android:text="Ver más"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.15"
-        />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/holi"
+        app:layout_constraintVertical_bias="0.13" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
