--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Catatumbo"
+        android:text="Medellín"
         android:textStyle="bold"
         android:textSize="22dp"
         app:layout_constraintVertical_bias="0.05"
