--- a/app/src/main/res/layout/activity_restaurantes_home.xml
+++ b/app/src/main/res/layout/activity_restaurantes_home.xml
@@ -5,29 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RestaurantesHome"
-    android:background="@color/deepskyblue"
     >
 
+
     <TextView
-        android:text="@string/resenarestaurantes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.5"
+        android:text="@string/resenarestaurantes"
         android:textSize="22dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.59" />
 
     <ImageView
 
         android:layout_width="900dp"
         android:layout_height="200dp"
-        android:layout_marginTop="44dp"
-        android:src="@drawable/plato"
+        android:layout_marginTop="120dp"
+        android:src="@drawable/comida_medellin"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,12 +36,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginBottom="132dp"
+        android:layout_marginBottom="168dp"
         android:backgroundTint="@color/blueviolet"
         android:text="Ver más"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.266"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 
