--- a/app/src/main/res/layout/activity_turismo_home.xml
+++ b/app/src/main/res/layout/activity_turismo_home.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TurismoHome"
-    android:background="@color/darkslateblue"
     >
 
     <TextView
@@ -25,7 +24,7 @@
         android:layout_width="900dp"
         android:layout_height="200dp"
         android:layout_marginTop="44dp"
-        android:src="@drawable/excursionismo"
+        android:src="@drawable/comuna"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
