--- a/app/src/main/res/layout/activity_restaurantes_home.xml
+++ b/app/src/main/res/layout/activity_restaurantes_home.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/botonsitios"
+        android:id="@+id/botonrestaurantes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
