--- a/app/src/main/res/layout/activity_molde_hotel.xml
+++ b/app/src/main/res/layout/activity_molde_hotel.xml
@@ -50,7 +50,7 @@
         />
 
     <TextView
-        android:id="@+id/contactoHotel"
+        android:id="@+id/contactoListaHotel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Contacto:"
