--- a/app/src/main/res/layout/activity_turismo_home.xml
+++ b/app/src/main/res/layout/activity_turismo_home.xml
@@ -7,40 +7,72 @@
     tools:context=".TurismoHome"
     >
 
+    <ImageView
+        android:id="@+id/fotoListaSitio"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/comuna"
+        android:scaleType="fitXY"
+        app:layout_constraintVertical_bias="0"
+        />
     <TextView
-        android:text="@string/resenasitios"
+        android:id="@+id/nombreListaSitio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fotoListaSitio"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        android:textSize="22dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Comuna 13"
+        app:layout_constraintVertical_bias="0.01"
+        app:layout_constraintHorizontal_bias="0.1"
+        android:textSize="26dp"
+        android:textStyle="bold"
         />
 
-    <ImageView
-
-        android:layout_width="900dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="44dp"
-        android:src="@drawable/comuna"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/botonturismo"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/precioListaSitio"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginBottom="132dp"
-        android:backgroundTint="@color/blueviolet"
-        android:text="Ver más"
+        android:text="$250000 COP"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.266"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.048"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nombreListaSitio"
+        app:layout_constraintVertical_bias="0.048"
+
+        />
+
+    <TextView
+        android:id="@+id/contactoListaSitio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Contacto:"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.042"
+        app:layout_constraintStart_toEndOf="@id/precioListaSitio"
+        app:layout_constraintTop_toBottomOf="@id/nombreListaSitio"
+        app:layout_constraintVertical_bias="0.048" />
+
+    <TextView
+        android:id="@+id/telefono_Sitio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3225286688"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.632"
+        app:layout_constraintStart_toEndOf="@id/precioListaSitio"
+        app:layout_constraintTop_toBottomOf="@id/nombreListaSitio"
+        app:layout_constraintVertical_bias="0.048" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
