--- a/app/src/main/res/layout/activity_lista_hoteles.xml
+++ b/app/src/main/res/layout/activity_lista_hoteles.xml
@@ -7,6 +7,8 @@
     tools:context=".ListaHoteles">
 
     <androidx.recyclerview.widget.RecyclerView
+
+        android:id="@+id/listadinamicahoteles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
