--- a/app/src/main/res/layout/activity_turismo_home.xml
+++ b/app/src/main/res/layout/activity_turismo_home.xml
@@ -75,4 +75,17 @@
         app:layout_constraintTop_toBottomOf="@id/nombreListaSitio"
         app:layout_constraintVertical_bias="0.048" />
 
+    <Button
+        android:id="@+id/botonsitios"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginBottom="152dp"
+        android:backgroundTint="@color/blueviolet"
+        android:text="Ver más"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
