--- a/app/src/main/res/layout/molde_restaurantes.xml
+++ b/app/src/main/res/layout/molde_restaurantes.xml
@@ -33,7 +33,7 @@
         />
 
     <TextView
-        android:id="@+id/rangoprecio"
+        android:id="@+id/precio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/restaurante"
@@ -50,7 +50,7 @@
         android:id="@+id/telefonorestaurante"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/rangoprecio"
+        app:layout_constraintTop_toBottomOf="@+id/precio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,7 +61,7 @@
         />
 
     <TextView
-        android:id="@+id/platorecomendado"
+        android:id="@+id/plato"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/telefonorestaurante"
@@ -70,7 +70,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintHorizontal_bias="0"
-        android:text="@string/platorecomendado"
+        android:text="@string/plato"
         android:textSize="20dp"
         android:textStyle="bold"
         />
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/telefonorestaurante"
-        app:layout_constraintStart_toEndOf="@id/platorecomendado"
+        app:layout_constraintStart_toEndOf="@id/plato"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.0"
