--- a/app/src/main/res/layout/activity_hoteles_home.xml
+++ b/app/src/main/res/layout/activity_hoteles_home.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/botonsitios"
+        android:id="@+id/botonHotel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
