--- a/app/src/main/res/layout/activity_molde_hotel.xml
+++ b/app/src/main/res/layout/activity_molde_hotel.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".moldes.MoldeHotel">
 
+<androidx.cardview.widget.CardView
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="10dp"
+    app:cardUseCompatPadding="true"
+    android:layout_height="wrap_content">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/fotoListaHotel"
@@ -38,7 +45,7 @@
         android:id="@+id/precioListaHotel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$250000 COP"
+        android:text="$250000 "
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +60,7 @@
         android:id="@+id/contactoListaHotel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Contacto:"
+        android:text="Contacto: 3225322222"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,3 +83,7 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
+
+
